--- a/intro.html
+++ b/intro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>공연 소개 | Hidden Track - STAGE BURN</title>
+  <title>공연 소개</title>
   <style>
     body {
       margin: 0;
@@ -343,7 +343,6 @@
       <!-- 위쪽 타이틀을 이미지 한 장으로 교체 -->
       <img src="image_file/Ttitle_intro.png" alt="Hidden Track 공연 소개" class="hero-text-intro" />
 
-      <!-- 필요하면 아래 공연 정보 텍스트는 그대로 유지 -->
       <div class="info">
         2025.11.27 | 학생극장 PM 18:30<br />
         눈앞에서 펼쳐지는 라이브 공연, <br />숨겨진 마지막 트랙까지.
@@ -359,7 +358,7 @@
         이번 공연 <b>&lt;Hidden Track&gt;</b>은
         우리가 쉽게 넘겨버렸던 한 구절, 한 소절에 집중하는 시간입니다.
         매번 재생 버튼을 누르게 만드는 ‘인생곡’처럼,
-        무대를 채우는 각 팀의 곡들 속에 저마다의 이야기를 숨겨 두었습니다.
+        무대를 채우는 각 곡들 속에 저마다의 이야기를 숨겨 두었습니다.
       </p>
       <p>
         익숙한 커버곡과 새로운 자작곡이 다채롭게 구성되며,
@@ -369,7 +368,8 @@
       <div class="highlight-box">
         <div class="highlight-title">이 공연에서 놓치지 말 것</div>
         <ul class="highlight-list">
-          <li>· 원곡과는 다른 질감의 편곡, 라이브만의 텐션</li>
+          <li>· 원곡과는 다른 질감의 커버곡, 자체 제작 커버곡</li>
+          <li>· 라이브만의 텐션</li>
           <li>· 무대와 객석이 함께 만드는 떼창과 호응</li>
           <li>· 공연이 끝난 후에도 계속 재생될 플레이리스트</li>
         </ul>
@@ -380,8 +380,7 @@
       <div class="section-label">PROGRAM</div>
       <div class="section-title">공연 구성 안내</div>
       <p>
-        공연은 <b>1부</b>와 <b>2부</b>로 나누어 진행되며,
-        각 부의 마지막에는 팀별로 준비한 ‘히든트랙’이 공개됩니다.
+        공연은 <b>1부</b>와 <b>2부</b>로 나누어 진행됩니다.
       </p>
 
       <div class="meta-grid">
