--- a/intro.html
+++ b/intro.html
@@ -368,7 +368,8 @@
       <div class="highlight-box">
         <div class="highlight-title">이 공연에서 놓치지 말 것</div>
         <ul class="highlight-list">
-          <li>· 원곡과는 다른 질감의 커버곡, 자체 제작 커버곡</li>
+          <li>· 원곡과는 다른 질감의 커버곡</li>
+          <li>· 다양한 장르로 구성된 자작곡</li>
           <li>· 라이브만의 텐션</li>
           <li>· 무대와 객석이 함께 만드는 떼창과 호응</li>
           <li>· 공연이 끝난 후에도 계속 재생될 플레이리스트</li>
