--- a/about_SB.html
+++ b/about_SB.html
@@ -172,6 +172,21 @@
   transform: translateY(0);
 }
 
+.link-button {
+  display: inline-block;
+  margin: 2px;
+  padding: 7px 10px;
+  background-color: ghostwhite;
+  color: black;
+  text-decoration: none;
+  font-family: 'Malgun Gothic', sans-serif;
+  border-radius: 6px;
+  transition: background-color 0.3s ease;
+  }
+.link-button:hover {
+  background-color: ghostwhite;
+}
+
     
   </style>
 </head>
@@ -210,6 +225,20 @@
         비트 메이킹, 녹음, 믹싱을 통해 음악을 제작하는 활동을 합니다.</div>
 
   </header>
+  <div class="section profile-section" style="text-align:center;">
+            <div>
+                <a href="https://on.soundcloud.com/Yg9PR1Fma3rJzdmNPH" target="_blank" class="section link-button">🎧</a>
+                <a href="https://www.instagram.com/hknu_stageburn" target="_blank" class="section link-button">📸</a>
+                <a href="https://youtube.com/@stageburn" target="_blank" class="section link-button">📺</a>
+            <p class="section" style="font-size: 11px; color: snow;">
+                <br>Stage Brun만의 자체 제작 심리 테스트를<br>아래 링크에서 체험할 수 있습니다.
+            </p>
+            <div>
+                <a href="https://poomang.com/kbhx1a" target="_blank" class="section link-button">✨ SBTI</a>
+            </div>
+            <p><br></p>
+        </div>
+</div>
 
 <script>
   function toggleMenu() {
