--- a/audio_track.html
+++ b/audio_track.html
@@ -431,8 +431,7 @@
       { title: "P2 - Track 2", artist: "Artist B", audioSrc: "audio/p2_track2.mp3", lyrics: "새로운 시작, P2-T2 가사입니다." }, /* cite: 106 */
       { title: "P2 - Track 3", artist: "Artist B", audioSrc: "audio/p2_track3.mp3", lyrics: "P2 - Track 3 가사.\n파트 전환을 해보세요." }, /* cite: 107 */
       { title: "P2 - Track 4", artist: "Artist B", audioSrc: "audio/p2_track4.mp3", lyrics: "P2 - Track 4 가사.\n이 레코드는 3D입니다." }, /* cite: 108 */
-      { title: "P2 - Track 5", artist: "Artist B", audioSrc: "audio/p2_track5.mp3", lyrics: "P2 - Track 5 가사." }, /* cite: 109 */
-      { title: "P2 - Track 6", artist: "Artist B", audioSrc: "audio/p2_track6.mp3", lyrics: "파트 2의 마지막 트랙 가사입니다." }
+      { title: "P2 - Track 5", artist: "Artist B", audioSrc: "audio/p2_track5.mp3", lyrics: "파트 2의 마지막 트랙 가사입니다." } /* cite: 109 */
     ]
   };
   /* ------------------------------
@@ -666,7 +665,7 @@
       while(dragAccum <= -TICK_ANGLE){ prevTrack(); dragAccum += TICK_ANGLE; flashPlayer(); /* cite: 161 */
       }
 
-      v *= 0.92;
+      v *= 0.12;
       requestAnimationFrame(frame);
     }
     requestAnimationFrame(frame); /* cite: 162 */
@@ -738,5 +737,4 @@ progressBar.addEventListener('input', () => {
 });
   </script>
   </body>
-
   </html>
