--- a/about_SB.html
+++ b/about_SB.html
@@ -202,6 +202,7 @@
     <ul>
     <li><a href="about_SB.html">동아리 소개</a></li>
     <li><a href="intro.html">공연 소개</a></li>
+    <li><a href="track_list.html">트랙리스트</a></li>
     <li><a href="audio_track.html">플레이리스트</a></li>
   </ul>
 </div>
@@ -282,3 +283,4 @@
 </script>
 </body>
 </html>
+
