--- a/track_list.html
+++ b/track_list.html
@@ -175,6 +175,15 @@
   width: 100%;        /* 화면 너비에 맞추기 */
 }
 
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
   </style>
 </head>
 <body>
