--- a/index.html
+++ b/index.html
@@ -209,6 +209,14 @@
         animation-delay: 2s;
       }
     }
+    * {
+        box-sizing: border-box;
+      }
+
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
   </style>
 </head>
 
@@ -307,4 +315,5 @@
   </script>
 </body>
 </html>
+
 
