--- a/about_SB.html
+++ b/about_SB.html
@@ -220,7 +220,7 @@
     <div class="section text1">STAGE BURN</div>
     <div class="section text2">한경국립대학교 유일 힙합 동아리</div>
     <br><br><br>
-    <div class="section text3">HipHop 및 R&B 곡을 커버하고, 창작하며<br>
+    <div class="section text3">HipHop 및 R&B 곡을 커버, 창작하며<br>
         다양한 음악 활동을 하고 있습니다.<br>
         '자체 제작 동아리'라는 타이틀을 가지고<br>
         비트 메이킹, 녹음, 믹싱을 통해 음악을 제작하는 활동을 합니다.</div>
@@ -283,4 +283,3 @@
 </script>
 </body>
 </html>
-
