--- a/intro.html
+++ b/intro.html
@@ -356,24 +356,24 @@
       <div class="section-label">CONCEPT</div>
       <div class="section-title">플레이리스트의<br>마지막 칸에 숨겨진,<br>우리의 히든트랙</div>
       <p>
-        이번 공연 <b>&lt;Hidden Track&gt;</b>은
+        이번 정기 공연 <b>&lt;Hidden Track&gt;</b>은
         우리가 쉽게 넘겨버렸던 한 구절, 한 소절에 집중하는 시간입니다.
         매번 재생 버튼을 누르게 만드는 ‘인생곡’처럼,
         무대를 채우는 각 곡들 속에 저마다의 이야기를 숨겨 두었습니다.
       </p>
       <p>
         익숙한 커버곡과 새로운 자작곡이 다채롭게 구성되며,
-        당신의 플레이리스트에 새로 추가될 ‘숨겨진 한 트랙’을 찾아가는 여정을 함께합니다.
+        당신의 플레이리스트에 새로 추가될 ‘숨겨진 한 트랙’을 찾아가는 여정을 함께해주세요.
       </p>
 
       <div class="highlight-box">
         <div class="highlight-title">이 공연에서 놓치지 말 것</div>
         <ul class="highlight-list">
-          <li>· 원곡과는 다른 질감의 커버곡</li>
+          <li>· 원곡과는 다른 우리만의 커버곡</li>
           <li>· 다양한 장르로 구성된 자작곡</li>
-          <li>· 라이브만의 텐션</li>
-          <li>· 무대와 객석이 함께 만드는 떼창과 호응</li>
-          <li>· 공연이 끝난 후에도 계속 재생될 플레이리스트</li>
+          <li>· 라이브에서만 느낄 수 있는 텐션</li>
+          <li>· 공연자와 객석이 함께 만드는 무대</li>
+          <li>· 공연이 끝난 후에도 계속될 플레이리스트</li>
         </ul>
       </div>
     </section>
@@ -405,7 +405,6 @@
         <ul class="highlight-list">
           <li>· Opening</li>
           <li>· Part.1</li>
-          <li>· Intermission</li>
           <li>· Part.2</li>
           <li>· Ending</li>
         </ul>
@@ -472,6 +471,5 @@
   </script>
 </body>
 </html>
-
 
 
