--- a/audio_track.html
+++ b/audio_track.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover" />
-  <title>3D Vinyl Player — Audio Enabled</title>
+  <title>Hidden Track PlayList</title>
   <style>
         header {
         position: relative;
@@ -736,4 +736,5 @@ progressBar.addEventListener('input', () => {
   </script>
   </body>
   </html>
+
 
