--- a/track_list.html
+++ b/track_list.html
@@ -230,7 +230,7 @@ html, body {
     <div class="section text2">
         <br>Puzzle (cover)
         <div class="section text3">이종승 김채영</div>
-        <br>WoWoWo
+        <br>Wowowow
         <div class="section text3">이재승 원태연</div>
         <br>드릴
         <div class="section text3">송태웅 정수교</div>
@@ -294,3 +294,4 @@ html, body {
 </script>
 </body>
 </html>
+
