--- a/track_list.html
+++ b/track_list.html
@@ -219,7 +219,7 @@ html, body {
         <div class="section text3">정의인 김희재</div>
         <br>We go up slide
         <div class="section text3">이재승 김정훈 유희수</div>
-        <br>호랑나비 (cover)
+        <br>으리으리 + 호랑나비 (cover)
         <div class="section text3">송태웅 정수교</div>
         <br>Loser
         <div class="section text3">김영석 이재승</div>
@@ -294,4 +294,5 @@ html, body {
 </script>
 </body>
 </html>
+
 
