--- a/track_list.html
+++ b/track_list.html
@@ -221,7 +221,7 @@ html, body {
         <div class="section text3">이재승 김정훈 유희수</div>
         <br>으리으리 + 호랑나비 (cover)
         <div class="section text3">송태웅 정수교</div>
-        <br>Loser
+        <br>LlOoSsEeRr
         <div class="section text3">김영석 이재승</div>
         <br>다시 걸을 때 (cover)
         <div class="section text3">정예원 김채영</div>
@@ -290,3 +290,4 @@ html, body {
 </script>
 </body>
 </html>
+
