--- a/track_list.html
+++ b/track_list.html
@@ -232,7 +232,7 @@ html, body {
         <div class="section text3">이종승 김채영</div>
         <br>wowowow
         <div class="section text3">이재승 원태연</div>
-        <br>드릴
+        <br>Pack
         <div class="section text3">송태웅 정수교</div>
         <br>Bad Habit
         <div class="section text3">정수교 이재승</div>
@@ -290,4 +290,5 @@ html, body {
 </script>
 </body>
 </html>
+
 
