--- a/track_list.html
+++ b/track_list.html
@@ -213,31 +213,33 @@ html, body {
     <div class="section text2">
         <br>이게 사랑이지 뭐야 (cover)
         <div class="section text3">신지민 이종승</div>
-        <br>Time Ticking
-        <div class="section text3">송태웅 이재승</div>
         <br>걍 대충
         <div class="section text3">정의인 김희재</div>
         <br>We go up slide
         <div class="section text3">이재승 김정훈 유희수</div>
-        <br>으리으리 + 호랑나비 (cover)
+        <br>Bad Habit
+        <div class="section text3">정수교 이재승</div>
+        <br>으리으리 (cover)
         <div class="section text3">송태웅 정수교</div>
-        <br>LlOoSsEeRr
-        <div class="section text3">김영석 이재승</div>
-        <br>다시 걸을 때 (cover)
-        <div class="section text3">정예원 김채영</div>
+        <br>??
+        <div class="section text3">??</div>
     </div>
     <div class="section text1"><br><br><br>Part.2</div>
     <div class="section text2">
-        <br>Puzzle (cover)
+        <br>Time Ticking
+        <div class="section text3">송태웅 이재승</div>
+        <br>Walk Afraid
+        <div class="section text3">김영석 정의인</div>
+        <br>LlOoSsEeRr
+        <div class="section text3">김영석 이재승</div>
+        <br>다시 걸을 때
+        <div class="section text3">정예원 김채영</div>
+        <br>Puzzle
         <div class="section text3">이종승 김채영</div>
         <br>wowowow
         <div class="section text3">이재승 원태연</div>
         <br>Pack
         <div class="section text3">송태웅 정수교</div>
-        <br>Bad Habit
-        <div class="section text3">정수교 이재승</div>
-        <br>Walk Afraid
-        <div class="section text3">김영석 정의인</div>
     <br><br>
     </div>
 
@@ -290,5 +292,3 @@ html, body {
 </script>
 </body>
 </html>
-
-
