--- a/track_list.html
+++ b/track_list.html
@@ -232,9 +232,9 @@ html, body {
         <div class="section text3">김영석 정의인</div>
         <br>LlOoSsEeRr
         <div class="section text3">김영석 이재승</div>
-        <br>다시 걸을 때
+        <br>다시 걸을 때 (cover)
         <div class="section text3">정예원 김채영</div>
-        <br>Puzzle
+        <br>Puzzle (cover)
         <div class="section text3">이종승 김채영</div>
         <br>wowowow
         <div class="section text3">이재승 원태연</div>
@@ -292,3 +292,4 @@ html, body {
 </script>
 </body>
 </html>
+
