--- a/track_list.html
+++ b/track_list.html
@@ -226,6 +226,8 @@ html, body {
     </div>
     <div class="section text1"><br><br><br>Part.2</div>
     <div class="section text2">
+        <br>털어! (SoundCloud only.)
+        <div class="section text3">김희재 정수교</div>
         <br>Time Ticking
         <div class="section text3">송태웅 이재승</div>
         <br>Walk Afraid
@@ -292,4 +294,3 @@ html, body {
 </script>
 </body>
 </html>
-
