--- a/track_list.html
+++ b/track_list.html
@@ -228,7 +228,7 @@ html, body {
     <div class="section text2">
         <br>털어!
         <div class="section text3">SoundCloud only.</div>
-        <div class="section text3">김희재 정수교</div>
+        <div class="section text3">김희재 정수교 (김영민)</div>
         <br>Time Ticking
         <div class="section text3">송태웅 이재승</div>
         <br>Walk Afraid
@@ -295,3 +295,4 @@ html, body {
 </script>
 </body>
 </html>
+
